# Solitaire

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS  README.md  io.github.shbozz.Solitaire.json  meson.build  org.gnome.Solitaire.Devel.json  org.gnome.Solitaire.json  org.gnome.gitlab.wwarner.Solitaire.Devel.json
data/: io.github.shbozz.Solitaire.desktop.in  io.github.shbozz.Solitaire.gschema.xml  io.github.shbozz.Solitaire.metainfo.xml.in  io.github.shbozz.Solitaire.service.in  meson.build  org.gnome.Solitaire.desktop.in  org.gnome.Solitaire.gschema.xml  org.gnome.Solitaire.metainfo.xml.in  org.gnome.Solitaire.service.in  org.gnome.gitlab.wwarner.Solitaire.gschema.xml  org.gnome.gitlab.wwarner.Solitaire.metainfo.xml.in  org.gnome.gitlab.wwarner.Solitaire.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  card.rs  card_stack.rs  config.rs  config.rs.in  game-rewrite.c  game-rewrite.h  game.c  game.h  game_board.rs  games.rs  libgnome_games_binding.rs  main.rs  meson.build  patsolve.rs  renderer.rs  runtime.rs  shortcuts-dialog.blp  solitaire.gresource.xml  solver-debug.blp  style.css  window.blp  window.rs
src/card_themes/: README.anglo_poker
src/games/: freecell.rs  klondike.rs  meson.build  solver.rs  test.rs  tri_peaks.rs
src/gtk/: help-overlay.blp
subprojects/: libgnome-games-support.wrap
subprojects/libgnome-games-support/games/scores/: context.vala
