[package]
name = "solitaire"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
gtk = { version = "0.10", package = "gtk4", features = ["gnome_48"] }
librsvg = "2.61"
cairo = { version = "0.21", package = "cairo-rs" }

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_6"]
